funland/openspeedtest/openspeedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
    app.kubernetes.io/instance: openspeedtest
    app.kubernetes.io/component: speed-test
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.33
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: openspeedtest
    app.kubernetes.io/instance: openspeedtest
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
