funland/openspeedtest/openspeedtest/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "speedtest.batlab.io"
  rules:
    - backendRefs:
        - name: openspeedtest
          port: 80
